--- a/views/admin/marksheet/history.ejs
+++ b/views/admin/marksheet/history.ejs
@@ -1,11 +1,13 @@
-<h1>Marksheet for <%= checkDate %></h1>
 <div class="flex justify-end my-4">
 	<button onclick="history.back()" class="px-5 py-2 rounded bg-blue-500 text-white text-xs font-semibold font-sans uppercase">Back</button>
 </div>
+<h1>Marksheet for <%= checkDate %></h1>
 <div class="relative rounded-xl overflow-auto">
 	<% if(trainees.length < 1) { %>
 	<div class="grid place-items-center h-[70vh]">
-		<h1 class="block font-bold text-2xl">Register wasn't taken on this day</h1>
+		<div class="text-center">
+			<h1 class="font-bold text-lg mb-2">Register wasn't taken that day</h1>
+		</div>
 	</div>
 	<% } else { %>
 	<div class="shadow-sm overflow-hidden my-8">
@@ -14,31 +16,48 @@
 				<tr>
 					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">First Name</th>
 					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Last Name</th>
+					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Dorm</th>
 					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Phone</th>
-					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Email</th>
+					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Course</th>
 					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Gender</th>
 					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Status</th>
-					<th class="border-b font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 text-left">Actions</th>
 				</tr>
 			</thead>
 
 			<tbody class="bg-white">
 				<% trainees.forEach(trainee => { %>
-				<tr>
+				<% if (trainee.status == "Present") { %>
+					<tr class="bg-green-100">
+				<% } else if (trainee.status == "Absent") {%>
+					<tr class="bg-orange-100">
+				<% } else if (trainee.status == "Away") { %> 
+					<tr class="bg-red-100">
+				<% } else { %>
+					<tr>
+				<% } %>  
 					<td class="border-b border-slate-100 p-4 pl-8 text-slate-500"><%= trainee.first_nm %></td>
 					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.last_nm %></td>
+					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.dorm_room %></td>
 					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.phone_num %></td>
-					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.email %></td>
+					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.course %></td>
 					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.gender %></td>
-					<td class="border-b border-slate-100 p-4 text-slate-500"><%= trainee.status %></td>
-					<td class="border-b border-slate-100 p-4 pr-8 text-slate-500">
-						<a href="/admin/marksheet/edit/<%= trainee.uuid %>">Edit</a>
+					<td class="border-b border-slate-100 p-4 text-slate-500">
+						<form name="status_form" action="/admin/marksheet/status/<%= trainee.mks_id %>" method="POST">
+							<select onchange="this.form.submit()" name="trn_status" id="trn_stat" data-mark_status_id="<%= trainee.mks_id %>">
+								<% statuses.forEach(status => { %>
+								<option  <%= status.status == trainee.status ? "selected='true'" : null %>  value="<%= status.id %>">
+									<%= status.status %>
+								</option>
+								<% }) %>
+							</select>
+						</form>
 					</td>
 				</tr>
+				
 				<% }) %>
 			</tbody>
 		</table>
 	</div>
 	<% } %>
 </div>
-<script src="/assets/js/admin.trainee.js"></script>
+<script src="/assets/js/admin.marksheet.js"></script>
